Add projections and offsets table support with enhanced Lambdas.
Introduced support for new Projections and Offsets DynamoDB tables to handle replay and event sourcing workflows. Enhanced Lambda functions (ReplayLambda, SourceLambda, ReplayBatchLambda) with updated responsibilities for creating projections and replay tasks. Updated the CDK stack to reflect these changes, including resource, role, and permission enhancements.